Chore: update wiki

--- a/wiki/中文字幕.md
+++ b/wiki/中文字幕.md
@@ -1,6 +1,6 @@
 ## 字幕标签
 
-JavTube 插件对于以下几种情况，会自动为影片添加`中文字幕`标签：
+MetaTube 插件对于以下几种情况，会自动为影片添加`中文字幕`标签：
 
 - 视频以`-C`或`-ch`后缀结尾，例如色花堂下载的中字资源
 - 视频目录下存在`.chi`，`.chs`，`.cht`等结尾的字幕文件
