--- a/wiki/人脸识别.md
+++ b/wiki/人脸识别.md
@@ -1,4 +1,4 @@
-**JavTube** 与其他同类插件最大的区别在于完全无感知的人脸识别体验。
+**MetaTube** 与其他同类插件最大的区别在于完全无感知的人脸识别体验。
 
 本插件人脸识别基于[pigo](https://github.com/esimov/pigo)项目在后端实现，无需任何配置，部署完后端即可使用。
 
