--- a/wiki/关于代理.md
+++ b/wiki/关于代理.md
@@ -1,4 +1,5 @@
 ## 建议
+
 由于刮削源的特殊性，对于后端，使用者都需要有一个能够正常访问**真正互联网**的网络，且最好出口IP为**日本**或**美国**（因为部分刮削源仅对以上两个地区完全开放）。
 
 所以，首选部署后端的方式为`Cloud-Native`方式，其次为部署在VPS上，再之后是部署在本地。
@@ -9,7 +10,7 @@
 
 ## 后端
 
-`javtube-server`后端支持环境变量的方式使用代理，支持的代理类型为 HTTP 代理。目前大多数的科学上网工具都支持以 HTTP 代理接入上网的选项，例如 [Clash](https://github.com/Dreamacro/clash) 默认`http://你的IP:7890`为 HTTP 代理地址，其他软件类似，这里不作过多阐述。
+`metatube-server`后端支持环境变量的方式使用代理，支持的代理类型为 HTTP 代理。目前大多数的科学上网工具都支持以 HTTP 代理接入上网的选项，例如 [Clash](https://github.com/Dreamacro/clash) 默认`http://你的IP:7890`为 HTTP 代理地址，其他软件类似，这里不作过多阐述。
 
 > 注意：本文默认使用者已经知道环境变量的基础概念，如果不清楚此概念可以先花5分钟谷歌一下。
 
