--- a/wiki/后端部署.md
+++ b/wiki/后端部署.md
@@ -4,31 +4,33 @@
 
 ## 后端项目
 
-后端项目名为`javtube-server`
+后端项目名为`metatube-server`
 
 二进制文件发布于：
 
-- [GitHub Releases](https://github.com/javtube/javtube-server-releases/releases)
+- [GitHub Releases](https://github.com/metatube-community/metatube-server-releases/releases)
 
 Docker镜像发布于：
 
-- [DockerHub](https://hub.docker.com/r/javtube/javtube-server)
-- [GitHub Container Registry](https://github.com/javtube/javtube-sdk-go/pkgs/container/javtube-server)
+- [DockerHub](https://hub.docker.com/r/metatube/metatube-server)
+- [GitHub Container Registry](https://github.com/metatube-community/metatube-sdk-go/pkgs/container/metatube-server)
 
 > 由于 DockerHub 的下载限制，建议优先选择GitHub Container Registry下载镜像。
 
 ## 如何部署
 
-> `javtube-server`资源占用非常低，理论上任何内存>=128MB，硬盘>=2G的机器，都可以直接运行二进制程序或者docker容器。
+> `metatube-server`资源占用非常低，理论上任何内存>=128MB，硬盘>=2G的机器，都可以直接运行二进制程序或者docker容器。
 
 ### 直接部署(★☆☆)
 
-1. 从[Releases](https://github.com/javtube/javtube-server-releases/releases)下载最新后端程序。
+1. 从[Releases](https://github.com/metatube-community/metatube-server-releases/releases)下载最新后端程序。
 2. 使用如下**任意模式**命令运行后端：
-  - 内存模式：`./javtube-server`
-  - 数据库模式(推荐)：`./javtube-server -dsn javtube.db`
+
+- 内存模式：`./metatube-server`
+- 数据库模式(推荐)：`./metatube-server -dsn metatube.db`
 
 > Tips：
+>
 > - 带`-v3`后缀的版本理论上运行效率更高，但是需要新版的CPU支持。
 > - Windows下可以直接双击运行，但是仍旧建议使用数据库模式持久化数据。
 > - 默认端口为8080，若出现端口占用的情况，可以使用`-port`参数配置其他端口。
@@ -44,20 +46,20 @@ Docker镜像发布于：
 - 内存模式：
 
 ```sh
-docker run -d -p 8080:8080 --name javtube javtube/javtube-server:latest
+docker run -d -p 8080:8080 --name metatube metatube/metatube-server:latest
 ```
 
 - 数据库模式(推荐)：
 
 ```sh
-docker run -d -p 8080:8080 -v $PWD/config:/config --name javtube javtube/javtube-server:latest -dsn /config/javtube.db
+docker run -d -p 8080:8080 -v $PWD/config:/config --name metatube metatube/metatube-server:latest -dsn /config/metatube.db
 ```
 
 **更新后端需要先运行以下命令再重新跑一遍上述命令，初次安装请跳过**
 
 ```sh
-docker stop javtube
-docker rm javtube
+docker stop metatube
+docker rm metatube
 ```
 
 ### Raspberry Pi部署(★★☆)
@@ -78,7 +80,7 @@ docker rm javtube
 - 不需要给后端配置代理，且使用美国IP，刮削限制少。
 - 自动支持HTTPS，可以避免如Emby下图片加载的问题。
 
-请看：[Heroku一键部署](https://github.com/javtube/javtube-server-heroku)
+请看：[Heroku一键部署](https://github.com/metatube-community/metatube-server-heroku)
 
 ### Koyeb部署(★★☆)
 
@@ -87,7 +89,7 @@ docker rm javtube
 - 永久免费🆓（只要不倒闭）。
 - 自动支持HTTPS。
 
-请看：[Koyeb快速部署](https://github.com/javtube/javtube-server-koyeb)
+请看：[Koyeb快速部署](https://github.com/metatube-community/metatube-server-koyeb)
 
 ## 参数配置
 
