--- a/wiki/命名规范.md
+++ b/wiki/命名规范.md
@@ -47,7 +47,7 @@ PS：大小写不敏感，但是注意不要混淆`-`与`_`符号。
 
 ## 总览
 
-JavTube尽量支持了~~奇形怪状｜乱七八糟｜五花八门~~各式各样的视频文件名，例如以下花括号内均为可识别文件名：
+MetaTube尽量支持了~~奇形怪状｜乱七八糟｜五花八门~~各式各样的视频文件名，例如以下花括号内均为可识别文件名：
 
 ```
 {"ABP-030", "ABP-030"},
@@ -87,4 +87,3 @@ JavTube尽量支持了~~奇形怪状｜乱七八糟｜五花八门~~各式各样
 ```
 
 但是，为了保证识别的**正确性**，强烈建议使用**正常的人类可看懂的**文件命名方式。
-
