--- a/wiki/图像裁剪.md
+++ b/wiki/图像裁剪.md
@@ -12,22 +12,28 @@
 
 ### 手动定位(★★★)
 
-JavTube支持另一种半自动半手动的图像裁剪方式，这种方式不需要自己裁剪图片并上传，可以省去部分麻烦，比较推荐。
+MetaTube支持另一种半自动半手动的图像裁剪方式，这种方式不需要自己裁剪图片并上传，可以省去部分麻烦，比较推荐。
 
 手动定位方法如下：
 
-1. 在`编辑元数据` => `外部 Ids` 下找到 `JavTube Id`的值，并复制，如：
-  - `HEYZO:2341`
-  - `JavBus:n0238`
+1. 在`编辑元数据` => `外部 Ids` 下找到 `MetaTube Id`的值，并复制，如：
+
+- `HEYZO:2341`
+- `JavBus:n0238`
+
 2. 手动判断该影片封面主要中心位置`pos`，如：
-  - 需要裁剪左侧四分之一的封面，记`0.25`
-  - 需要裁剪中心的封面，记`0.5`
-  - 需要裁剪右侧四分之一的封面，记`0.75`
-  - 需要裁剪靠右的封面，记`1.0`
+
+- 需要裁剪左侧四分之一的封面，记`0.25`
+- 需要裁剪中心的封面，记`0.5`
+- 需要裁剪右侧四分之一的封面，记`0.75`
+- 需要裁剪靠右的封面，记`1.0`
+
 3. 选择该影片，点击识别。
-4. 在`JavTube Id`中输入之前复制的值，并用冒号连接`pos`值，如：
-  - `HEYZO:2341:0.75`
-  - `JavBus:n0238:0.63`
+4. 在`MetaTube Id`中输入之前复制的值，并用冒号连接`pos`值，如：
+
+- `HEYZO:2341:0.75`
+- `JavBus:n0238:0.63`
+
 5. 点击确认，封面即可完成半手动裁剪更新。
 
 _注意：0 <= pos <= 1，表示裁剪中心位置与图片宽度的比值。_
