--- a/wiki/封面比例.md
+++ b/wiki/封面比例.md
@@ -6,14 +6,13 @@
 
 在下图中，可以很明显的看到JAV`7:10`比例的封面会多出一些完整的内容：
 
-
 | 2:3比例 | 7:10比例（A面） |
 | ----- | ----- |
 |![MASM-005-0 66](https://user-images.githubusercontent.com/28824352/177555243-64c695c9-16c2-452d-8434-bd9e7b1007c4.jpeg)|![MASM-005-0 7](https://user-images.githubusercontent.com/28824352/177555277-bdcf75d3-6b4e-44bb-9150-06de7a207025.jpeg)|
 
 ## 解决方案
 
-JavTube插件现已支持自定义封面比例（**需要后端版本>=1.0.9**），需要完整封面的可以将Ratio设置为`0.7`。
+MetaTube插件现已支持自定义封面比例（**需要后端版本>=1.0.9**），需要完整封面的可以将Ratio设置为`0.7`。
 
 但是需要注意：
 
