--- a/wiki/手动识别.md
+++ b/wiki/手动识别.md
@@ -12,16 +12,16 @@
 
 ### 常规搜索+源匹配
 
-在常规搜索的基础上输入的同时，在 `JavTubeId` 下输入需要使用搜索的源，如：
+在常规搜索的基础上输入的同时，在 `MetaTubeId` 下输入需要使用搜索的源，如：
 
 - `FANZA`
 - `JavBus`
 
-> 具体源支持查看此[页面](https://github.com/javtube/jellyfin-plugin-javtube/wiki/%E6%95%B0%E6%8D%AE%E6%9D%A5%E6%BA%90)。
+> 具体源支持查看此[页面](https://github.com/metatube-community/jellyfin-plugin-metatube/wiki/%E6%95%B0%E6%8D%AE%E6%9D%A5%E6%BA%90)。
 
 ### 精准ID搜索
 
-直接在 `JavTubeId` 下输入需要使用搜索的源+**ID**，如：
+直接在 `MetaTubeId` 下输入需要使用搜索的源+**ID**，如：
 
 - `FANZA:ssis00120`
 - `ARZON:145678`
