--- a/wiki/插件安装.md
+++ b/wiki/插件安装.md
@@ -7,17 +7,17 @@
 ## Jellyfin
 
 1. 进入 Jellyfin 控制台 > 插件 > 存储库，点击添加
-2. 输入存储库名称：`JavTube`
-3. 输入存储库URL：[`https://raw.githubusercontent.com/javtube/jellyfin-plugin-javtube/dist/manifest.json`](https://raw.githubusercontent.com/javtube/jellyfin-plugin-javtube/dist/manifest.json)
-4. 在插件目录下找到 JavTube，点击安装
+2. 输入存储库名称：`MetaTube`
+3. 输入存储库URL：[`https://raw.githubusercontent.com/metatube-community/jellyfin-plugin-metatube/dist/manifest.json`](https://raw.githubusercontent.com/metatube-community/jellyfin-plugin-metatube/dist/manifest.json)
+4. 在插件目录下找到 MetaTube，点击安装
 5. 重启Jellyfin
 
-_适用于中国大陆的存储库URL：[`https://cdn.jsdelivr.net/gh/javtube/jellyfin-plugin-javtube@dist/manifest.json`](https://cdn.jsdelivr.net/gh/javtube/jellyfin-plugin-javtube@dist/manifest.json)（可能有缓存）_
+_适用于中国大陆的存储库URL：[`https://cdn.jsdelivr.net/gh/metatube-community/jellyfin-plugin-metatube@dist/manifest.json`](https://cdn.jsdelivr.net/gh/metatube-community/jellyfin-plugin-metatube@dist/manifest.json)（可能有缓存）_
 
 ## Emby
 
-1. 从 [Releases](https://github.com/javtube/jellyfin-plugin-javtube/releases) 下载 JavTube 最新插件
-2. 解压出 JavTube.dll 文件
+1. 从 [Releases](https://github.com/metatube-community/jellyfin-plugin-metatube/releases) 下载 MetaTube 最新插件
+2. 解压出 MetaTube.dll 文件
 3. 将 dll 文件复制到 Emby 插件目录
 4. 重启 Emby 服务
 
