--- a/wiki/自动翻译.md
+++ b/wiki/自动翻译.md
@@ -14,6 +14,6 @@
 
 ## 选择语言
 
-进入 `控制台` > `媒体库` > `选择开启JavTube的媒体库` > `管理媒体库`，将首选下载语言设置为需要翻译成的语言，例如：简体中文。
+进入 `控制台` > `媒体库` > `选择开启MetaTube的媒体库` > `管理媒体库`，将首选下载语言设置为需要翻译成的语言，例如：简体中文。
 
 > PS：开启翻译前刮削的所有影片依旧为原来的语言，如有需要可以手动选择刷新元数据更新。
