--- a/docs/wiki/.manual-searching.md
+++ b/docs/wiki/.manual-searching.md
@@ -6,7 +6,7 @@
 
 ### 常规搜索
 
-直接在 `识别`>`标题` 中输入想要搜索的影片**番号**即可，如：
+直接在 `识别`>`标题` 中输入想要搜索的影片**品番**即可，如：
 
 - `IPX-230`
 - `ABP-330`
@@ -29,7 +29,7 @@
 - `ARZON:145678`
 - `JavBus:ABP-033`
 
-> 注意：ID不是番号，是每个影片网页地址固定的格式ID。
+> 注意：ID不是品番，是每个影片网页地址固定的格式ID。
 
 ### 精准URL搜索
 
