Docs: guide for plex plugin installation

--- a/docs/wiki/.genre-substitution.md
+++ b/docs/wiki/.genre-substitution.md
@@ -2,6 +2,8 @@
 
 ## 如何使用
 
+注意：在 Plex 中使用替换功能需要多一步 Base64 编码过程，不然无法保存替换表。可以使用在线的[Base64编码网站](https://www.base64encode.org/)进行编码。
+
 ### 替换类型
 
 使用`XXX=YYY`格式，即可把`XXX`类型替换为`YYY`。
@@ -28,7 +30,9 @@
 
 ## 参考替换表
 
-```text
+> WIP
+
+<!-- ```text
 10枚組=
 16時間以上作品=16小时+
 3D=
@@ -335,4 +339,4 @@ OL=职业装
 超級女英雄=女战士
 複刻版=重制版
 エマニエル=欲女
-```
+``` -->
